# skyward

./: Cargo.toml  LICENSE  README.md
assets/tech_trees/: main_tree.json
src/: lib.rs  main.rs
src/components/: buildings.rs  mod.rs  player.rs  resources.rs
src/resources/: game_state.rs  inventory.rs  mod.rs  technology.rs
src/systems/: building.rs  mod.rs  player_controller.rs  resource_gathering.rs  technology.rs  world_generation.rs
src/ui/: hud.rs  menus.rs  mod.rs
