[package]
name = "skyward"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
leafwing-input-manager = "0.17"
noise = "0.8"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
